# google-drive-files-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: claude-code.md  claude-desktop.md  other-clients.md  setup-google-oauth.md
examples/: file-into-dated-folder.sh
src/google_drive_files_mcp/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  docs.py  server.py  sheets.py
tests/: test_client.py  test_config.py  test_docs.py  test_sheets.py
